--- a/employee-service/src/main/resources/application.yml
+++ b/employee-service/src/main/resources/application.yml
@@ -24,5 +24,5 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
-      # defaultZone: ${EUREKA_URL} -> eureka-service/eureka
+      # defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
+      defaultZone: ${EUREKA_URL}
