--- a/eureka-service/src/main/resources/application.yaml
+++ b/eureka-service/src/main/resources/application.yaml
@@ -12,5 +12,4 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone:
-        http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
