--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,66 @@
 version: "3.8"
 services:
+  config-server:
+    container_name: config-server
+    image: josemiguelchvz/config-server:latest
+    ports:
+      - "8081:8081"
   eureka-service:
     container_name: eureka-service
     image: josemiguelchvz/eureka-service:latest
     ports:
       - "8761:8761"
+    depends_on:
+      - config-server
+    links:
+      - config-server
+    deploy:
+      restart_policy:
+        condition: on-failure
+    environment:
+      - spring.config.import=optional:configserver:http://config-server:8081
   gateway-service:
     container_name: gateway-service
     image: josemiguelchvz/gateway-service:latest
+    deploy:
+      restart_policy:
+        condition: on-failure
     environment:
-      - eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
+      - spring.config.import=optional:configserver:http://config-server:8081
+      - EUREKA_URL=http://eureka-service:8761/eureka/
     ports:
       - "8080:8080"
     depends_on:
+      - config-server
       - eureka-service
     links:
+      - config-server
       - eureka-service
-  employee-service:
-    container_name: employee-service
-    image: josemiguelchvz/employee-service:latest
-    ports:
-      - "31231:8181"
-    environment:
-        - eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
-    deploy:
-        restart_policy:
-          condition: on-failure
-    depends_on:
-      - eureka-service
-    links:
-      - eureka-service
-  report-service:
-    container_name: report-service
-    image: josemiguelchvz/report-service:latest
-    ports:
-      - "31438:8282"
-    environment:
-        - eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
-    deploy:
-        restart_policy:
-          condition: on-failure
-    depends_on:
-      - eureka-service
-    links:
-      - eureka-service
+  # employee-service:
+  #   container_name: employee-service
+  #   image: josemiguelchvz/employee-service:latest
+  #   ports:
+  #     - "31231:8181"
+  #   environment:
+  #       - eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
+  #   deploy:
+  #       restart_policy:
+  #         condition: on-failure
+  #   depends_on:
+  #     - eureka-service
+  #   links:
+  #     - eureka-service
+  # report-service:
+  #   container_name: report-service
+  #   image: josemiguelchvz/report-service:latest
+  #   ports:
+  #     - "31438:8282"
+  #   environment:
+  #       - eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
+  #   deploy:
+  #       restart_policy:
+  #         condition: on-failure
+  #   depends_on:
+  #     - eureka-service
+  #   links:
+  #     - eureka-service
