--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,20 +36,23 @@ services:
     links:
       - config-server
       - eureka-service
-  # employee-service:
-  #   container_name: employee-service
-  #   image: josemiguelchvz/employee-service:latest
-  #   ports:
-  #     - "31231:8181"
-  #   environment:
-  #       - eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
-  #   deploy:
-  #       restart_policy:
-  #         condition: on-failure
-  #   depends_on:
-  #     - eureka-service
-  #   links:
-  #     - eureka-service
+  employee-service:
+    container_name: employee-service
+    image: josemiguelchvz/employee-service:latest
+    ports:
+      - "31231:8181"
+    environment:
+      - spring.config.import=optional:configserver:http://config-server:8081
+      - EUREKA_URL=http://eureka-service:8761/eureka/
+    deploy:
+        restart_policy:
+          condition: on-failure
+    depends_on:
+      - config-server
+      - eureka-service
+    links:
+      - config-server
+      - eureka-service
   # report-service:
   #   container_name: report-service
   #   image: josemiguelchvz/report-service:latest
